--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           onefile: true
           standalone: true
           enable-plugins: tk-inter
-          windows-disable-console: true
+          disable-console: true
           windows-icon-from-ico: logo_256x256.ico
 
       - name: Upload Artifact
